--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <body>
 
-    <div id="miElemento">Texto inicial</div>
+    <!-- <div id="miElemento">Texto inicial</div>
     <button id="miBoton">Actualizar</button>
     <button id="filtroGeneroFemenino">Filtrar por Género Femenino</button>
     <button id="filtroEdad38">Filtrar por Edad 38</button>
-    <button id="filtroEstadoCivilCasado">Filtrar por Estado Civil Casado</button>
+    <button id="filtroEstadoCivilCasado">Filtrar por Estado Civil Casado</button> -->
 
-    <!-- <div id="miElemento">Texto inicial</div>
+    <div id="miElemento">Texto inicial</div>
     <button id="miBoton" onclick="imprimirInformacionPersonas()">Actualizar</button>
     <button id="filtroGeneroFemenino" onclick="filtrarPorGenero('Femenino')">Filtrar por Género Femenino</button>
     <button id="filtroEdad38" onclick="filtrarPorEdad(38)">Filtrar por Edad 38</button>
-    <button id="filtroEstadoCivilCasado" onclick="filtrarPorEstadoCivil('Casado')">Filtrar por Estado Civil Casado</button> -->
+    <button id="filtroEstadoCivilCasado" onclick="filtrarPorEstadoCivil('Casado')">Filtrar por Estado Civil Casado</button>
 
   <script>
 
@@ -82,11 +82,11 @@
         }
     ]
     
-    var miElemento = document.getElementById('miElemento');
-    var miBoton = document.getElementById('miBoton');
-    var filtroGeneroFemenino = document.getElementById('filtroGeneroFemenino');
-    var filtroEdad38 = document.getElementById('filtroEdad38');
-    var filtroEstadoCivilCasado = document.getElementById('filtroEstadoCivilCasado');
+    // var miElemento = document.getElementById('miElemento');
+    // var miBoton = document.getElementById('miBoton');
+    // var filtroGeneroFemenino = document.getElementById('filtroGeneroFemenino');
+    // var filtroEdad38 = document.getElementById('filtroEdad38');
+    // var filtroEstadoCivilCasado = document.getElementById('filtroEstadoCivilCasado');
 
     function imprimirInformacionPersonas() {
       let new_text = '';
@@ -119,19 +119,19 @@
       miElemento.innerHTML = new_text;
     }
 
-    miBoton.addEventListener('click', imprimirInformacionPersonas);
+    // miBoton.addEventListener('click', imprimirInformacionPersonas);
 
-filtroGeneroFemenino.addEventListener('click', function() {
-  filtrarPorGenero('Femenino');
-});
+// filtroGeneroFemenino.addEventListener('click', function() {
+//   filtrarPorGenero('Femenino');
+// });
 
-filtroEdad38.addEventListener('click', function() {
-  filtrarPorEdad(38);
-});
+// filtroEdad38.addEventListener('click', function() {
+//   filtrarPorEdad(38);
+// });
 
-filtroEstadoCivilCasado.addEventListener('click', function() {
-  filtrarPorEstadoCivil('Casado');
-});
+// filtroEstadoCivilCasado.addEventListener('click', function() {
+//   filtrarPorEstadoCivil('Casado');
+// });
     
   </script>
 </body>
